--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
